# mvfonttableau

./: README.md
project/: CMakeLists.txt  create_tableaus_verdana.sh  install_libs_ubuntu.sh  main.cpp  makefile  readme-msys.txt  svn_add_source.sh
project/freetype/: CGL_Context.h  CGL_Freetype.cpp  CGL_Freetype.h  CRectT.h  CRectT.hpp
project/freetype/CGL/: .CGL_Basic_ALT.cpp.kate-swp  CGL_Basic.cpp  CGL_Basic_ALT.cpp  CGL_FrameBuffer.cpp  CGL_Freetype.cpp  CGL_Texture.cpp  NGLprimitives.cpp
project/freetype/include/: CBlockOperations.h  CDataRect.h  CFileIO.h  CFrameBuffer.h  CGL_Basic.h  CGL_Context.h  CGL_FrameBuffer.h  CGL_Freetype.h  CGL_Texture.h  CGraflib.h  CGraflibPng.h  CHexConv.h  CHexConv.hpp  CPixel.h  CPixel24.h  CPixel24.hpp  CPixel24fixT.h  CPixel32.h  CPixel32.hpp  CPixel8.h  CPolygon.h  CRectT.h  CRectT.hpp  CUtf.h  CVector2T.h  CVector2T.hpp  CVector3T.h  CVector3T.hpp  EFileTypes.h  GLinclude.h  MathDefines.h  NGLprimitives.h  NPng16.h  NStringTool.h  NUtf2.h  PnglibInterface.h  SFileReadInfo.h  template_macros.hpp
project/freetype/include/libpng_16/: png.h  pngconf.h  pnginfo.h  pnglibconf.h  pngstruct.h
project/freetype/lib/: CBlockOperations.cpp  CDataRect.cpp  CFileIO.cpp  CGraflib.cpp  CGraflibPng.cpp  CPixel24.cpp  CPixel32.cpp  CUtf.cpp  NStringTool.cpp  NUtf.cpp  NUtf2.cpp  PnglibInterface.c  dir.txt  write_png.cpp
